fix(index): update title style

--- a/index.html
+++ b/index.html
@@ -51,15 +51,12 @@
     <hr>
     <!-- Paper Title -->
     <div class="container text-center">
-        <span class="title-font x-gradient-font">VectorPainter:</span>
-        <a class="title-font text-body-emphasis"
-           href="#">
-            Advanced Stylized Vector Graphics Synthesis Using Stroke-Style Priors
-        </a>
+        <span class="title-font x-gradient-font">VectorPainter: Advanced Stylized Vector Graphics Synthesis Using Stroke-Style Priors</span>
+        <!-- <a class="title-font text-body-emphasis" href="#"></a> -->
     </div>
     <hr>
     <!-- author list -->
-    <div class="container author text-center">
+    <div class="container author text-center" style="width: 60%;">
         <!-- authors -->
         <div class="row gy-2"> <!-- 使用 gy-* 统一控制行间距 -->
             <div class="col-12 col-md">
@@ -93,10 +90,10 @@
                 <!-- <div class="col col-lg-2">
                     <a id="paper" href="#">Paper</a>
                 </div> -->
-                <div class="col col-lg-2">
+                <div class="col col-lg-2" style="width: 15%;">
                     <a id="arxiv" href="https://arxiv.org/abs/2405.02962">Arxiv</a>
                 </div>
-                <div class="col col-lg-2">
+                <div class="col col-lg-2" style="width: 20%;">
                     <a id="code" href="#">Code</a> (coming soon)
                 </div>
                 <!-- <div class="col col-lg-2">
