--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- authors -->
         <div class="row gy-2"> <!-- 使用 gy-* 统一控制行间距 -->
             <div class="col-12 col-md">
-                <a class="link" href="https://scholar.google.com/citations?user=XJOWTBYAAAAJ">Juncheng Hu</a><sup>1</sup>
+                <a class="link" href="https://hjc-owo.github.io">Juncheng Hu</a><sup>1</sup>
             </div>
             <div class="col-12 col-md">
                 <a class="link" href="https://ximinng.github.io/">Ximing Xing</a><sup>1</sup>
