🎉🎉🎉 Accepted by ICME 2025 🎉🎉🎉

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
         </div>
     </div>
     <!-- paper status -->
-    <!-- <div class="text-center" style="margin-top: 20px">
-        <h3>Paper status - Under Review</h3>
-    </div> -->
+    <div class="text-center" style="margin-top: 20px">
+        <h3 style="font-weight: bold">🎉🎉🎉 Accepted by ICME 2025 🎉🎉🎉</h3>
+    </div>
+
     <!-- links -->
     <div class="text-center">
         <div class="row justify-content-md-center">
